温度センサーの取得をボタンでon/offできるように追加

--- a/bme280.kv
+++ b/bme280.kv
@@ -4,6 +4,11 @@ BoxLayout:
     orientation: 'vertical'
     size: root.size
 
+    ToggleButton:
+        id: temp_switch
+        text: "temp off"
+        on_press: app.temp_switch(self.state)
+
     BoxLayout:
         Label:
             text: "temp"
